--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
     <head>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid" id="accueil">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
-                    <p class="mb-0">Nathalie Sepré</p>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-flex justify-content-center ms-5" id="navbarNav">
+                <div class="d-flex align-items-center">
+                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
+                        <p class="mb-0">Nathalie Sepré</p>
+                    </a>
+                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="reflexologieDropdown" role="button"
@@ -35,7 +38,7 @@
                                 Réflexologie
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="reflexologieDropdown">
-                                <li><a class="dropdown-item" href="prepaSeance.html">Préparer ma séance</a></li>
+                                <li><a class="dropdown-item" href="preparationSeance.html">Préparer ma séance</a></li>
                                 <li><a class="dropdown-item" href="tarifs.html">Tarifs</a></li>
                             </ul>
                         </li>
@@ -51,8 +54,6 @@
         <div class="centered-text d-grid justify-content-center align-content-center text-white">
             <h1>Nathalie Sepré</h1>
             <p class="text-img">Réflexologue à la Chapelle Saint Aubin</p>
-            <p class="text-img">Harmonie du corps et de l’esprit selon les principes de la médecine traditionnelle
-                chinoise</p>
         </div>
         <div class="container my-5">
             <div class="row d-flex justify-content-center align-items-center">
@@ -171,16 +172,16 @@
                 <div class="col-md-6">
                     <h5>Contact</h5>
                     <p>
-                        Adresse : 28 rue des Lilas, 72650 La Chapelle Saint Aubin<br>
-                        Téléphone : <br>
-                        Email : nathaliesepre@gmail.com
+                        Adresse : <span>28 rue des Lilas, 72650 La Chapelle Saint Aubin</span><br>
+                        Téléphone : <span>0659466762</span><br>
+                        Email : <span>nathalie.sepre.reflexologue@gmail.com</span>
                     </p>
                 </div>
                 <div class="col-md-6">
                     <h5>Liens rapides</h5>
                     <ul class="list-unstyled mt-4">
                         <li><a href="index.html" class="text-decoration-none">Accueil</a></li>
-                        <li><a href="prepaSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
+                        <li><a href="preparationSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
                         <li><a href="tarifs.html" class="text-decoration-none">Tarifs</a></li>
                         <li><a href="parcours.html" class="text-decoration-none">Mon parcours</a></li>
                     </ul>
