--- a/preparationSeance.html
+++ b/preparationSeance.html
@@ -34,7 +34,7 @@
                                 Réflexologie
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="reflexologieDropdown">
-                                <li><a class="dropdown-item" href="prepaSeance.html">Préparer ma séance</a></li>
+                                <li><a class="dropdown-item" href="preparationSeance.html">Préparer ma séance</a></li>
                                 <li><a class="dropdown-item" href="tarifs.html">Tarifs</a></li>
                             </ul>
                         </li>
@@ -126,17 +126,17 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Contact</h5>
-                    <p class="mt-4">
-                        Adresse : 28 rue des Lilas, 72650 La Chapelle Saint Aubin<br>
-                        Téléphone : <br>
-                        Email : nathaliesepre@gmail.com
+                    <p>
+                        Adresse : <span>28 rue des Lilas, 72650 La Chapelle Saint Aubin</span><br>
+                        Téléphone : <span>0659466762</span><br>
+                        Email : <span>nathalie.sepre.reflexologue@gmail.com</span>
                     </p>
                 </div>
                 <div class="col-md-6">
                     <h5>Liens rapides</h5>
                     <ul class="list-unstyled mt-4">
                         <li><a href="index.html" class="text-decoration-none">Accueil</a></li>
-                        <li><a href="prepaSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
+                        <li><a href="preparationSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
                         <li><a href="tarifs.html" class="text-decoration-none">Tarifs</a></li>
                         <li><a href="parcours.html" class="text-decoration-none">Mon parcours</a></li>
                     </ul>
