--- a/tarifs.html
+++ b/tarifs.html
@@ -17,16 +17,19 @@
 
     <head>
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
-                    <p class="mb-0">Nathalie Sepré</p>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-flex justify-content-center ms-5" id="navbarNav">
+            <div class="container-fluid" id="accueil">
+                <div class="d-flex align-items-center">
+                    <a class="navbar-brand d-flex align-items-center" href="index.html">
+                        <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
+                        <p class="mb-0">Nathalie Sepré</p>
+                    </a>
+                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="reflexologieDropdown" role="button"
