--- a/parcours.html
+++ b/parcours.html
@@ -82,7 +82,7 @@
                     <h5>Contact</h5>
                     <p>
                         Adresse : <span>28 rue des Lilas, 72650 La Chapelle Saint Aubin</span><br>
-                        Téléphone : <span>0659466762</span><br>
+                        Téléphone : <span class="phone text-decoration-none">0659466762</span><br>
                         Email : <span>nathalie.sepre.reflexologue@gmail.com</span>
                     </p>
                 </div>
