--- a/preparationSeance.html
+++ b/preparationSeance.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-md-6 mt-5">
                     <img src="images/istockphoto-1079107090-612x612.jpg" alt="Image de table de massage"
-                        class="rounded-4">
+                        class="rounded-4 img-fluid">
                 </div>
             </div>
         </div>
