--- a/preparationSeance.html
+++ b/preparationSeance.html
@@ -79,8 +79,7 @@
                     <p>
                         Il est conseillé de ne pas s’alimenter dans l’heure précédant la séance.
                         De même, il vaut mieux espacer les rendez-vous de 24 à 48 h avec une consultation chez
-                        l’ostéopathe,
-                        kinésithérapeute, étiopathe…ou avec toute autre séance de massage.
+                        l’ostéopathe, kinésithérapeute ou avec toute autre séance de massage.
                     </p>
                     <p>
                         Il est conseillé de faire un minimum de 2 séances par an à l’entrée de l’automne et du
