--- a/preparationSeance.html
+++ b/preparationSeance.html
@@ -88,8 +88,8 @@
                     </p>
                 </div>
                 <div class="col-md-6 mt-5">
-                    <img src="images/istockphoto-1079107090-612x612.jpg" alt="Image de table de massage"
-                        class="rounded-4 img-fluid">
+                    <img class="rounded-4 img-fluid" src="images/istockphoto-1079107090-612x612.jpg"
+                        alt="Image de table de massage">
                 </div>
             </div>
         </div>
