--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-6 d-flex flex-column align-items-center text-center">
                     <img src="images/plantaire.jpg" alt="Image d'un massage plantaire" class="content-img">
+                    <h4>Réflexologie plantaire</h4>
                     <p>Aider l’organisme à rétablir son harmonie et ses facultés d’auto-régulation en utilisant les
                         zones réflexes du pied.</p>
                 </div>
                 <div class="col-md-6 d-flex flex-column align-items-center text-center">
                     <img src="images/palmaire.jpg" alt="Image d'un massage palmaire" class="content-img">
+                    <h4>Réflexologie palmaire</h4>
                     <p>Moins connue que la réflexologie plantaire, la réflexologie palmaire offre les mêmes bienfaits
                         que la plantaire.
                         <br> Les deux méthodes peuvent être pratiquées lors d’une même séance.
@@ -73,6 +75,7 @@
             <div class="row content-row my-5">
                 <div class="col-md-6 d-flex flex-column align-items-center text-center">
                     <img src="images/auriculaire.jpg" alt="Image d'un massage auriculaire" class="content-img">
+                    <h4>Réflexologie auriculaire</h4>
                     <p>La réflexologie auriculaire est une technique à but non thérapeutique qui vise à stimuler une ou
                         plusieurs zones réflexes sur le pavillon de l’oreille.
                         <br> Cette stimulation se fait à l’aide d’un
@@ -81,6 +84,7 @@
                 </div>
                 <div class="col-md-6 d-flex flex-column align-items-center text-center">
                     <img src="images/faciale.jpg" alt="Image d'un massage faciale" class="content-img">
+                    <h4>Réflexologie faciale</h4>
                     <p>C’est une technique qui utilise la multi réflexologie et qui agit rapidement.
                         <br> Il s’agit de
                         réguler les zones et les organes. Cette stimulation se fait à l’aide d’un stylet à bout
@@ -126,7 +130,7 @@
                             grossesse pour recevoir un soin de réflexologie.
                             Les personnes diabétiques ne peuvent être touchées aux pieds que par un podologue ou un
                             médecin, donc ces personnes doivent recevoir de la réflexologie autre que de la plantaire,
-                            item pour les personnes ayant une phlébite, une blessure aux pieds/chevilles ou encore des
+                            idem pour les personnes ayant une phlébite, une blessure aux pieds/chevilles ou encore des
                             problèmes circulatoires. D’où l’importance de l’entretien avant la séance pour déterminer
                             les zones à stimuler ou pas
                         </p>
