--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
                         <p class="mb-0">Nathalie Sepré</p>
                     </a>
-                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler ms-auto border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -32,18 +32,17 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="reflexologieDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Réflexologie
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="reflexologieDropdown">
-                                <li><a class="dropdown-item" href="preparationSeance.html">Préparer ma séance</a></li>
-                                <li><a class="dropdown-item" href="tarifs.html">Tarifs</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="parcours.html">Mon parcours</a>
+                            <a class="nav-link" href="parcours.html">Mon histoire</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preparationSeance.html">Préparer ma séance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tarifs.html">Infos pratiques</a>
                         </li>
                     </ul>
                 </div>
@@ -51,9 +50,11 @@
         </nav>
     </head>
     <main>
-        <div class="centered-text d-grid justify-content-center align-content-center text-white">
-            <h1>Nathalie Sepré</h1>
-            <p class="text-img">Réflexologue à la Chapelle Saint Aubin</p>
+        <div class="centered-text d-flex justify-content-center align-items-center text-white">
+            <div>
+                <h1>Nathalie Sepré</h1>
+                <p class="text-img">Réflexologue à la Chapelle Saint Aubin</p>
+            </div>
         </div>
         <div class="container my-5">
             <div class="row d-flex justify-content-center align-items-center">
@@ -101,21 +102,21 @@
                 <ul>
                     <li>
                         C'est un massage des pieds ?
-                        <span class="text-danger"> FAUX!</span>
+                        <span class="text-danger fw-bold"> FAUX!</span>
                         <p> La réflexologie n’est pas qu’un massage de pieds. C’est une
                             stimulation plus ou moins appuyée sur une zone réflexe.
                         </p>
                     </li>
                     <li>
                         La réflexologie ça fait mal ?
-                        <span class="text-danger">VRAI et FAUX</span>
+                        <span class="text-danger fw-bold">VRAI et FAUX</span>
                         <p>Si vous vous faites faire un soin de réflexologie en Asie, oui vous allez le sentir passer.
                             En Europe, nous sommes plus doux et nos séances sont adaptées à notre clientèle.
                         </p>
                     </li>
                     <li>
                         Pouvez-vous dire si un organe va mal ?
-                        <span class="text-danger">FAUX! </span>
+                        <span class="text-danger fw-bold">FAUX! </span>
                         <p>Un réflexologue ne peut pas établir de diagnostic, ce n’est pas son rôle, il n’est pas
                             médecin. C’est pourquoi un bon réflexologue effectuera toujours un bilan avant chacune de
                             vos séances afin de déterminer avec vous ce qui doit être travailler ou pas.
@@ -123,7 +124,7 @@
                     </li>
                     <li>
                         Tout le monde peut recevoir une séance de réflexologie ?
-                        <span class="text-danger">VRAI mais sous certaines conditions</span>
+                        <span class="text-success fw-bold">VRAI mais sous certaines conditions</span>
                         <p>Il est à noter que pour certaines personnes il est nécessaire de prendre quelques
                             précautions.
                             Les femmes enceintes doivent impérativement attendre la fin du premier trimestre de leur
@@ -137,7 +138,7 @@
                     </li>
                     <li>
                         La réflexologie, ça fonctionne vraiment ?
-                        <span class="text-danger">VRAI</span>
+                        <span class="text-success fw-bold">VRAI</span>
                         <p>La réflexologie fonctionne sur tout le monde. C’est un travail sur le système nerveux, or
                             tout le monde a un système nerveux (même les animaux), donc la réflexologie fonctionne !
                             Généralement les bienfaits se font sentir dès la première séance. Le bénéficiaire se sent
@@ -146,7 +147,7 @@
                     </li>
                     <li>
                         Je suis malade, mon réflexologue va me soigner ?
-                        <span class="text-danger">VRAI et FAUX!</span>
+                        <span class="text-danger fw-bold">VRAI et FAUX!</span>
                         <p>Lorsque nous sommes malades, le premier réflexe à avoir est d’aller rendre visite à son
                             médecin traitant. Seul lui est habiliter à établir un diagnostic et vous prescrire les
                             médicaments qu’il vous faut pour guérir.
@@ -156,7 +157,7 @@
                     </li>
                     <li>
                         Il faut beaucoup de séances pour aller mieux ?
-                        <span class="text-danger">FAUX!</span>
+                        <span class="text-danger fw-bold">FAUX!</span>
                         <p>Généralement, le problème est résolu en 3 séances.
                             Chaque personne consulte à son rythme, certaine aime venir une fois par mois pour ressentir
                             les effets relaxants, d’autre vienne tous les trois mois ou deux fois par an.
@@ -172,29 +173,18 @@
 
     <footer class="bg-dark text-white mt-5">
         <div class="container py-4">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>Contact</h5>
+            <div class="row mt-2">
+                <div class="col-md-12 d-grid justify-content-center">
+                    <h3>Contact</h3>
                     <p>
                         Adresse : <span>28 rue des Lilas, 72650 La Chapelle Saint Aubin</span><br>
                         Téléphone : <span class="phone">0659466762</span><br>
                         Email : <span>nathalie.sepre.reflexologue@gmail.com</span>
                     </p>
-                </div>
-                <div class="col-md-6">
-                    <h5>Liens rapides</h5>
-                    <ul class="list-unstyled mt-4">
-                        <li><a href="index.html" class="text-decoration-none">Accueil</a></li>
-                        <li><a href="preparationSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
-                        <li><a href="tarifs.html" class="text-decoration-none">Tarifs</a></li>
-                        <li><a href="parcours.html" class="text-decoration-none">Mon parcours</a></li>
-                    </ul>
+                    <p class="mb-0">&copy; 2024 Nathalie Réflexologue. Tous droits réservés.</p>
+            <p>Site fait par Valentin Sepré.</p>
                 </div>
             </div>
-        </div>
-        <div class="bg-secondary text-center py-2">
-            <p class="mb-0">&copy; 2024 Nathalie Réflexologue. Tous droits réservés.</p>
-            <p>Site fait par Valentin Sepré</p>
         </div>
     </footer>
 </body>
