--- a/preparationSeance.html
+++ b/preparationSeance.html
@@ -23,7 +23,7 @@
                         <img class="w-25 me-2 rounded-pill" src="images/logo.jpg" alt="Logo du site">
                         <p class="mb-0">Nathalie Sepré</p>
                     </a>
-                    <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler ms-auto border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -31,18 +31,17 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="reflexologieDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Réflexologie
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="reflexologieDropdown">
-                                <li><a class="dropdown-item" href="preparationSeance.html">Préparer ma séance</a></li>
-                                <li><a class="dropdown-item" href="tarifs.html">Tarifs</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="parcours.html">Mon parcours</a>
+                            <a class="nav-link" href="parcours.html">Mon histoire</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="preparationSeance.html">Préparer ma séance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tarifs.html">Infos pratiques</a>
                         </li>
                     </ul>
                 </div>
@@ -56,15 +55,14 @@
             </div>
             <div class="row">
                 <div class="mt-5 d-grid justify-content-center align-content-center col-md-6">
-                    <p>Les séances comprennent un entretien préalable afin d’établir le motif de votre venue avec un
+                    <p>Les séances comprennent un bilan réflexologique afin d’établir le motif de votre venue avec un
                         questionnaire assez précis sur votre état général, vos ressentis, vos douleurs et votre
                         environnement personnel (n’hésitez-pas à formuler tout symptôme même ceux qui vous paraissent
                         les
                         plus anodins et qui vous semble très éloignés de votre motif principal).
                     </p>
                     <p>
-                        Vous choisirez votre type de réflexologie ; palmaire, plantaire, auriculothérapie ou facial
-                        selon la médecine traditionnelle chinoise.
+                        Vous choisirez votre type de réflexologie ; palmaire, plantaire, auriculaire ou faciale.
                         Vous pourrez associer deux techniques ensemble ou les trois ; il n’est pas rare que
                         l’auriculothérapie vienne en supplément de la palmaire ou plantaire pour une action plus appuyée
                         avec des résultats plus intéressants.
@@ -125,29 +123,18 @@
     </main>
     <footer class="bg-dark text-white mt-5">
         <div class="container py-4">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>Contact</h5>
+            <div class="row mt-2">
+                <div class="col-md-12 d-grid justify-content-center">
+                    <h3>Contact</h3>
                     <p>
                         Adresse : <span>28 rue des Lilas, 72650 La Chapelle Saint Aubin</span><br>
-                        Téléphone : <span class="phone text-decoration-none">0659466762</span><br>
+                        Téléphone : <span class="phone">0659466762</span><br>
                         Email : <span>nathalie.sepre.reflexologue@gmail.com</span>
                     </p>
-                </div>
-                <div class="col-md-6">
-                    <h5>Liens rapides</h5>
-                    <ul class="list-unstyled mt-4">
-                        <li><a href="index.html" class="text-decoration-none">Accueil</a></li>
-                        <li><a href="preparationSeance.html" class="text-decoration-none">Préparer ma séance</a></li>
-                        <li><a href="tarifs.html" class="text-decoration-none">Tarifs</a></li>
-                        <li><a href="parcours.html" class="text-decoration-none">Mon parcours</a></li>
-                    </ul>
+                    <p class="mb-0">&copy; 2024 Nathalie Réflexologue. Tous droits réservés.</p>
+            <p>Site fait par Valentin Sepré.</p>
                 </div>
             </div>
-        </div>
-        <div class="bg-secondary text-center py-2">
-            <p class="mb-0">&copy; 2024 Nathalie Réflexologue. Tous droits réservés.</p>
-            <p>Site fait par Valentin Sepré</p>
         </div>
     </footer>
 </body>
