--- a/parcours.html
+++ b/parcours.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="images/nathalie.jpg" alt="Image de Nathalie" class="rounded-5 ms-5">
+                    <img src="images/20240703_135840.JPG" alt="Image de Nathalie" class="rounded-5 ms-5 img-fluid">
                 </div>
             </div>
         </div>
