--- a/tarifs.html
+++ b/tarifs.html
@@ -57,14 +57,14 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                            <span class="spanCard text-white">Adresse :</span> 28 rue des Lilas, 72650 La Chapelle Saint
+                            <p class="spanCard ">Adresse :<p> 28 rue des Lilas, 72650 La Chapelle Saint
                             Aubin
                         </p>
                         <p class="card-text">
-                            <span class="spanCard text-white">Téléphone :</span> 0659466762
+                            <p class="spanCard ">Téléphone :</p> 0659466762
                         </p>
                         <p class="card-text">
-                            <span class="spanCard text-white">Email :</span> nathalie.sepre.reflexologue@gmail.com
+                            <p class="spanCard ">Email :</p> nathalie.sepre.reflexologue@gmail.com
                         </p>
                     </div>
                 </div>
