--- a/parcours.html
+++ b/parcours.html
@@ -51,7 +51,7 @@
     <main>
         <div class="container">
             <div class="d-flex justify-content-center mt-3 text-decoration-underline">
-                <h1>Mon parcours</h1>
+                <h1>Mon histoire</h1>
             </div>
             <div class="row d-flex justify-content-between mt-5">
                 <div class="col-md-6">
